# projet_llmpos

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt  requirements_tests.txt
.github/workflows/: codecheck.yaml  rag_eval.yaml  tests.yaml
data/: faq_service_client.jsonl
rag/: base_connaissance.py  chunking.py  pipeline.py  recherche.py  reranking.py
tests/: test_chunking.py  test_rag.py
